feat: implement method security using PreAuthorize, Secured and RolesAllowed